Sat Mar  6 14:27:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/strscan/depend: depends on re.h and regex.h.

	* ext/strscan/strscan.c: no version check needed.

Sat Mar  6 11:14:33 2004  David Black  <dblack@wobblini.net>

	* lib/scanf.rb: refixed the previous fix in IO#block_scanf

Sat Mar  6 10:49:40 2004  David Black  <dblack@wobblini.net>

	* lib/scanf.rb: fixed a logic glitch in IO#block_scanf

Sat Mar  6 02:00:19 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: net/https is merged.

	* ext/openssl/lib/net/https.rb: ditto.

Fri Mar  6 00:39:21 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* oniggnu.h: imported from Oniguruma library.
	* oniguruma.h: ditto.
	* regcomp.c: ditto.
	* regenc.c: ditto.
	* regenc.h: ditto.
	* regerror.c: ditto.
	* regex.c: ditto.
	* regexec.c: ditto.
	* reggnu.c: ditto.
	* regint.h: ditto.
	* regparse.c: ditto.
	* regparse.h: ditto.
	* ascii.c: ditto.
	* euc_jp.c: ditto.
	* sjis.c: ditto.
	* utf8.c: ditto.

	* MANIFEST: added Oniguruma files listed above.

	* LEGAL: added Oniguruma license.

	* regex.h: now includes oniggnu.h.

	* re.c: applied Oniguruma patch.

Fri Mar  5 23:13:08 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: support WebDAV methods, PROPPATCH, LOCK,
	  UNLOCK, OPTIONS, PROPFIND, DELETE, MOVE, COPY, MKCOL.
	  This patch is contributed by Tatsuki Sugiura.

Fri Mar  5 20:58:37 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: Net::HTTPResponse#response is obsolete.
	  [ruby-core:02592]

	* lib/net/http.rb: Net::HTTPResponse#header is obsolete.

	* lib/net/http.rb: Net::HTTPResponse#read_header is obsolete.

Fri Mar  5 20:10:57 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: new method StringScanner#initialize_copy
	  to allow #dup and #clone.

	* test/strscan/test_strscan.rb: test StringScanner#dup.

Fri Mar  5 19:42:09 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTPResponse#to_ary): should return an object